# lis3dh-esp-idf

./: CMakeLists.txt
components/esp8266_wrapper/: CMakeLists.txt  esp8266_wrapper.c  esp8266_wrapper.h
components/lis3dh/: CMakeLists.txt
